[package]
name = "actix-guard"
version = "0.0.1"
edition = "2024"
description = "Application-layer security middleware for actix-web. Part of the guard ecosystem. WIP."
license = "MIT"
repository = "https://github.com/rennf93/actix-guard"
readme = "README.md"
keywords = ["security", "middleware", "api"]
categories = ["web-programming"]

[lib]
name = "actix_guard"